Fixed CSS footer overlapping with .grid-container

--- a/c/main.css
+++ b/c/main.css
@@ -127,6 +127,8 @@ footer{
 	font-size: .975em;
 	background: #eef4ff;
 	padding: 1.625em 2em;
+	grid-column: 1 / 3;
+        margin: 0 -2em -1.625em;
 }
 
 footer p:nth-last-of-type(1) {
@@ -143,7 +145,6 @@ img {
 .grid-container {
 	  display: grid;
 	  grid-template-columns: 1.75fr 1fr;
-	  grid-template-rows: 20% auto;
 	  grid-column-gap: 3.125em;
 	  max-width: 800px;
 }
